add links to layout.erb

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -5,3 +5,10 @@ views/layout.erb
 <%=yield%>
 
 <p>links go here</p>
+
+<a href="/songs/create_songs.erb">Create a Song</a>
+<a href="songs/edit_song.erb">Edit a Song</a>
+<a href="songs/show_song.erb">Show a Song</a>
+<a href="songs/songs.erb">List of Songs</a>
+<a href="users/create_user.erb">Sign Up</a>
+<a href="users/login.erb">Login</a>
